--- a/index.html
+++ b/index.html
@@ -3,9 +3,50 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="style.css">
-	<title>Document</title>
+	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
+	<title>My Portfolio</title>
 </head>
 <body>
-	<h1>Headh1</h1>
+	<header>
+		<h1>HELLO!</h1>
+		<h2 id="name-surname">I'M RUSLAN BABAEVSKIY</h2>
+	</header>
+	<main>
+			<section id="about-me">
+				<h4>ABOUT ME</h4>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, assumenda.</p>
+					<img src="my_photo.jpg" alt="my_photo">
+			</section>
+			<section id="achievements">
+				<h4>ACHIEVEMENTS</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, id.</p>
+			</section>
+			<section id="skills">
+			<ul>
+				<li id="html"><a href="http://htmlbook.ru/html">HTML</a></li>
+				<li id="css"><a href="https://css-tricks.com/">CSS</a></li>
+				<li id="js"><a href="https://learn.javascript.ru/">JavaScript</a></li>
+				<li id="ps"><a href="https://www.photoshop.com/en">PhotoShop</a></li>
+			</ul>
+
+				<div class="exp">
+				<h4>EXPERIENCE</h4>
+			<p>Junior Web Developer 2015-2017</p>
+			<p>Middle kurwa 2017-2019</p>
+			<p>HighSkilled procrastinator 2019-2020</p>
+			<p>FreeLANCER 2020-nowadays</p>
+				</div>	
+			</section>
+			
+		
+		
+	</main>
+	<footer>
+		<ul>
+			<li>+79379992</li>
+			<li>superhsmskms@gmail.com</li>
+			<li>www.kalachtheslayer.kurwa</li>
+		</ul>
+	</footer>
 </body>
 </html>
