--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<section id="about-me">
 				<h4>ABOUT ME</h4>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, assumenda.</p>
-					<img src="my_photo.jpg" alt="my_photo">
+					<img src="https://cdn1.savepice.ru/uploads/2020/3/10/3acdcc880c386d83fa0b4bb5a65daf2d-full.jpg" alt="my_photo">
 			</section>
 			<section id="achievements">
 				<h4>ACHIEVEMENTS</h4>
